--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#page-top">j3code.com</a>
+            <a class="navbar-brand" href="#page-top">j3code</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -53,9 +53,9 @@
                 <li class="hidden">
                     <a href="#page-top"></a>
                 </li>
-                <!-- <li class="page-scroll" hidden>
-                    <a href="#photos">Photos</a>
-                </li> -->
+                <li class="page-scroll" hidden>
+                    <a href="#posts">Posts</a>
+                </li>
                 <li class="page-scroll">
                     <a href="#portfolio">Resume</a>
                 </li>
@@ -77,8 +77,11 @@
 </header>
 
 <!-- Posts Grid Section -->
-<section id="posts" hidden>
-    Posts will live here
+<section id="posts">
+    <article class="container">
+        <h2>Title1</h2>
+        <p>Body goes here</p>
+    </article>
 </section>
 
 <!-- Portfolio Grid Section -->
