--- a/photos.html
+++ b/photos.html
@@ -44,7 +44,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#page-top">j3code</a>
+            <a class="navbar-brand" href="index.html">j3code</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -79,8 +79,8 @@
     </div>
 </header>
 
-<!-- Posts Grid Section -->
-<section id="postsContainer">
+<!-- Contact Section -->
+<section id="photos">
 </section>
 
 <!-- Footer -->
@@ -128,9 +128,6 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="js/freelancer.js"></script>
-
-<!-- Logic for loading posts goes here-->
-<script src="js/main.js"></script>
 
 </body>
 
